--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -10,6 +10,16 @@
   <tbody>
     <% @articles.each do |article| %>
       <tr>
+        <td></td>
+        <td><strong>Title:</strong></td>
+        <td><%= @article.title %></td>
+      </tr>
+      <tr>
+        <td></td>
+        <td><strong>Text:</strong></td>
+        <td><%= @article.text %></td>
+      </tr>
+      <tr>
         <td><%= link_to 'Show', article %></td>
         <td><%= link_to 'Edit', edit_article_path(article) %></td>
         <td><%= link_to 'Destroy', article, method: :delete, data: { confirm: 'Are you sure?' } %></td>
