--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -10,15 +10,20 @@
     </div>
   <% end %>
 
-  <div class="field">
+  <div class="form-group">
     <%= f.label :title %><br>
-    <%= f.text_field :title %>
+    <%= f.text_field :title, class: "form-control" %>
   </div>
-  <div class="field">
+  <div class="form-group">
     <%= f.label :text %><br>
-    <%= f.text_area :text %>
+    <%= f.text_area :text, class: "form-control", rows: 10 %>
   </div>
-  <div class="actions">
-    <%= f.submit %>
+  <% if !@article.new_record? %>
+    <div class="form-group">
+      <%= @article.created_at.to_formatted_s(:long_ordinal) %>
+    </div>
+  <% end %>
+  <div class="form-group">
+    <%= f.submit "Submit", class: "btn" %>
   </div>
 <% end %>
