--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,33 +1,18 @@
-<h1>Listing articles</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @articles.each do |article| %>
-      <tr>
-        <td></td>
-        <td><strong>Title:</strong></td>
-        <td><%= @article.title %></td>
-      </tr>
-      <tr>
-        <td></td>
-        <td><strong>Text:</strong></td>
-        <td><%= @article.text %></td>
-      </tr>
-      <tr>
-        <td><%= link_to 'Show', article %></td>
-        <td><%= link_to 'Edit', edit_article_path(article) %></td>
-        <td><%= link_to 'Destroy', article, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+<% @articles.each do |article| %>
+  <div class="article">
+    <h2><%= article.title %></h2>
+    <div>
+      <%= article.text %>
+    </div>
+    <div class="article-date">
+      <%= article.created_at.to_formatted_s(:long_ordinal) %>
+    </div>
+    <% if signed_in? %>
+      <div>
+        <%= link_to 'Show', article %> |
+        <%= link_to 'Edit', edit_article_path(article) %> |
+        <%= link_to 'Destroy', article, method: :delete, data: { confirm: 'Are you sure?' } %>
+      </div>
     <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Article', new_article_path if signed_in? %>
+  </div>
+<% end %>
