--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,14 +1,15 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <strong>Title:</strong>
-  <%= @article.title %>
-</p>
-
-<p>
-  <strong>Text:</strong>
-  <%= @article.text %>
-</p>
-
-<%= link_to 'Edit', edit_article_path(@article) if signed_in? %> |
-<%= link_to 'Back', articles_path %>
+<div>
+  <h2><%= @article.title %></h2>
+  <div>
+    <%= @article.text %>
+  </div>
+  <div class="article-date">
+    <%= @article.created_at.to_formatted_s(:long_ordinal) %>
+  </div>
+  <% if signed_in? %>
+    <div>
+      <%= link_to 'Edit', edit_article_path(@article) %> |
+      <%= link_to 'Destroy', @article, method: :delete, data: { confirm: 'Are you sure?' } %>
+    </div>
+  <% end %>
+</div>
