--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Juniper</title>
-  <%= stylesheet_link_tag    'application', media: 'all' %>
-  <%= javascript_include_tag 'application' %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
+  <head>
+    <title>What Nate Does</title>
+    <%= stylesheet_link_tag    'application', media: 'all' %>
+    <%= javascript_include_tag 'application' %>
+    <%= csrf_meta_tags %>
+  </head>
+  <body>
+    <%= render partial: "shared/application_header" %>
 
-<%= render partial: "shared/application_header" %>
+    <div class="container">
+      <% if flash[:error].present? %>
+        <div class="alert alert-danger"><%= flash[:error] %></div>
+      <% end %>
+      <% if notice %>
+        <div class="alert alert-info"><%= notice %></div>
+      <% end %>
 
-<div class="container">
-  <%= yield %>
-</div>
-
-</body>
+      <%= yield %>
+    </div>
+  </body>
 </html>
