--- a/app/views/shared/_application_header.html.erb
+++ b/app/views/shared/_application_header.html.erb
@@ -1,16 +1,12 @@
 <header>
-  <% if current_user %>
+  <% if signed_in? %>
     <div class="container">
       <nav>
-        <div class="dropdown pull-right">
-          <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">
-            <%= current_user.full_name %>
-            <span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu" role="menu">
-            <li role="presentation"><%= link_to "Profile", user_path(current_user) %></li>
-            <li role="presentation"><%= link_to "Sign Out", signout_path, method: :delete %></li>
-          </ul>
+        <div class="pull-right">
+          <%= link_to 'New', new_article_path %> |
+          <%= link_to "Articles", articles_path %> |
+          <%= link_to "Profile", user_path(current_user) %> |
+          <%= link_to "Signout", signout_path, method: :delete %>
         </div>
       </nav>
     </div>
