Add main banner to application layout
This commit adds a banner to the application layout for the app and
creates the associated banner component classes.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
   <body>
     <%= render partial: "shared/application_header" %>
 
+    <div class="banner banner-fixed banner-page-root"></div>
     <div class="container">
       <% if flash[:error].present? %>
         <div class="alert alert-danger"><%= flash[:error] %></div>
