--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -2,7 +2,12 @@
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
-  height: 500px;
+  height: 100%;
+  width: 100%;
+}
+
+.banner-cover {
+  height: 60%;
   width: 100%;
 }
 
