Replace new lines with breaks for article text
This commit replaces new line with breaks for article text in the
articles index page so that paragraphs are enforced when the text is
displayed on an html page.

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -2,7 +2,7 @@
   <div class="article">
     <h2><%= article.title %></h2>
     <div>
-      <%= article.text %>
+      <%= article.text.gsub(/\n/, '<br/>').html_safe if article.text %>
     </div>
     <div class="article-date">
       <%= article.created_at.to_formatted_s(:long_ordinal) %>
