--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -2,8 +2,6 @@
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
-  height: 100%;
-  width: 100%;
 }
 
 .banner-cover {
@@ -12,9 +10,12 @@
 }
 
 .banner-fixed {
-  background-attachment: fixed;
+  @media (min-width: $screen-lg-min) {
+    background-attachment: fixed;
+  }
 }
 
 .banner-page-root {
   background-image: image-url("nate.jpg");
+  height: 100%;
 }
