--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,9 @@
     <div id="container-wrapper">
       <div class="banner-cover">
         <div class="banner banner-fixed banner-page-root"></div>
+        <div class="nav-social">
+          <a href="https://github.com/nspielman" target="_blank"><i class="fa fa-github fa-2x"></i></a>
+        </div>
       </div>
       <div class="container">
         <% if flash[:error].present? %>
