--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -18,6 +18,10 @@
     <%= f.label :text %><br>
     <%= f.text_area :text, class: "form-control", rows: 10 %>
   </div>
+  <div class="form-group">
+    <%= f.label :is_archived %><br>
+    <%= f.check_box :is_archived %>
+  </div>
   <% if !@article.new_record? %>
     <div class="form-group">
       <%= @article.created_at.to_formatted_s(:long_ordinal) %>
